Name:                xtdo
Version:             0.1
Synopsis:            TODO list thing
Description:         TODO list thing
License:             MIT
License-file:        LICENSE
Author:              Xavier Shay
Maintainer:          Xavier Shay <contact@rhnh.net>
Build-Depends:       base >= 4,time,data-object,data-object-yaml,regex-posix,failure,split
build-type:          Simple

Executable:          xtdo
Main-is:             Main.hs
